﻿0.9.4a
Bugfixing:
- Fixed some errors regarding the Frelia's convertable hangars
- The Drone Carrier hullmod now properly sounds an error when mounting incompatible LPCs
- Fixed Sylvetra crash error
- Fixed chain-lightning style weapons such as the Clemency Ping triggering multiple times if the ship moved fast enough


0.9.4
Changes:
- New engine colour for most ships
- Changed Silverhead to skimmer system due to various issues with nullspace skip

Balancing:
- Adjusted a few more ship prices
- Lowered Rakia flux capacity from 18000 to 14000
- Improved Harrow's tracking ability


0.9.3d
Additions:
- Added Vesperon support

Changes:
- Changed the Sylphon paintjob some

Balancing:
- Readjusted DP values for multiple ships

Bugfixes:
- Fixed broken MagicLib check on game load


0.9.3c
Changes:
- Changed Valestri mount types around a bit. Medium hardpoints are now missile mounts while small hardpoints are now energy

Balancing:
- Increased Valestri's dissipation from 600 to 650
- Some more minor adjustments to ship prices

0.9.3b
Bugfixes:
- Fixed the Exalt fix

0.9.3a
Bugfixes:
- Fixed crash that happens when installing Shield Bypass on a ship with a Nullpoint Shield
- Improved AI handling of Exalts

0.9.3
Changes:
- The Metafalica's Type-3 shells are now splitter-shells
- Updated the hullmod description for the Variable Ammo Loader
- The Sylvetra's nanobots have had their metal-to-ammo gain rebalanced; they are now slightly better at refilling high-ammo weapons and slightly worse at refilling low-OP weapons (most notable on Reaper-like torpedoes)
- Added a small sound effect to the Sylvetra's nanobots when refilling a missile

Bugfixes:
- Fixed the Frelia having incorrect shield color
- The Ravana now properly uses two Embrace S instead of two Embraces
- The Embrace S can no longer be gained from blueprints, and does not show up in refit

Balancing:
- Adjusted the base prices of most weapons and some ships to be more within vanilla ranges